import { describe, expect, it } from "vitest";
import { type ReportLabels, renderReportHtml } from "./exportHtml";
import { buildReport, type ReportEntry, type ReportInput } from "./exportReport";

function at(date: string, hour: number): number {
	return Date.parse(`${date}T${String(hour).padStart(2, "0")}:00:00Z`);
}

const FR_LABELS: ReportLabels = {
	lang: "fr",
	brand: "Crohnicle",
	reportTitle: "Rapport de suivi",
	periodText: "Période : 30 derniers jours",
	generatedOn: "Généré le 4 juillet 2026",
	profileHeading: "Profil",
	diagnosisLabel: "Diagnostic",
	diagnosisValue: "Maladie de Crohn",
	diagnosisYearLabel: "Année du diagnostic",
	identityLabel: "Patient",
	scoreHeading: "HBI estimé (auto-évaluation)",
	scoreCaption: "Estimé par auto-évaluation, pas un diagnostic.",
	scoreEmpty: "Pas encore assez de données pour la courbe.",
	bandLabels: { remission: "Rémission", mild: "Légère", moderate: "Modérée", severe: "Sévère" },
	weeklyHeading: "Semaine par semaine",
	weeklyEmpty: "Aucune donnée sur la période.",
	weekWord: "Semaine",
	col: {
		week: "Semaine",
		stools: "Selles",
		bloodDays: "Jours avec sang",
		worstPain: "Pire douleur",
		weight: "Poids",
	},
	consultHeading: "3 points à aborder avec votre gastro",
	consultLines: ["Sang visible rapporté 3 jours sur 30.", "5 selles nocturnes sur la période."],
	associationsHeading: "Vos associations alimentaires",
	associationsText: "Disponible après 14 jours de données.",
	naValue: "—",
	disclaimer:
		"Document d'auto-évaluation généré par Crohnicle — ne constitue pas un avis médical ni un dispositif médical.",
};

const EN_LABELS: ReportLabels = {
	lang: "en",
	brand: "Crohnicle",
	reportTitle: "Tracking report",
	periodText: "Period: last 30 days",
	generatedOn: "Generated on July 4, 2026",
	profileHeading: "Profile",
	diagnosisLabel: "Diagnosis",
	diagnosisValue: "",
	diagnosisYearLabel: "Diagnosis year",
	identityLabel: "Patient",
	scoreHeading: "Estimated HBI (self-assessment)",
	scoreCaption: "Self-assessed estimate, not a diagnosis.",
	scoreEmpty: "Not enough data for the curve yet.",
	bandLabels: { remission: "Remission", mild: "Mild", moderate: "Moderate", severe: "Severe" },
	weeklyHeading: "Week by week",
	weeklyEmpty: "No data for this period.",
	weekWord: "Week",
	col: {
		week: "Week",
		stools: "Stools",
		bloodDays: "Days with blood",
		worstPain: "Worst pain",
		weight: "Weight",
	},
	consultHeading: "3 points to discuss with your GI",
	consultLines: ["No particular signal over the period — your tracking is complete."],
	associationsHeading: "Your food associations",
	associationsText: "Available after 14 days of data.",
	naValue: "—",
	disclaimer:
		"Self-assessment document generated by Crohnicle — not medical advice nor a medical device.",
};

/** Rapport riche (données denses) — profil Crohn, sang, selles nocturnes. */
function richReport() {
	const entries: ReportEntry[] = [];
	// 14 jours documentés avec HBI calculable (wellbeing + pain).
	for (let d = 1; d <= 14; d++) {
		const date = `2026-06-${String(d).padStart(2, "0")}`;
		entries.push({
			localDate: date,
			occurredAt: at(date, 20),
			tz: "UTC",
			kind: "symptom",
			wellbeing: d > 7 ? 3 : 1,
			pain: d > 7 ? 2 : 1,
			blood: d <= 3 ? 2 : 0,
		});
		entries.push({
			localDate: date,
			occurredAt: at(date, 9),
			tz: "UTC",
			kind: "stool",
			bristol: 6,
		});
		if (d <= 5) {
			entries.push({
				localDate: date,
				occurredAt: at(date, 2),
				tz: "UTC",
				kind: "stool",
				bristol: 6,
			});
		}
	}
	const input: ReportInput = {
		periodDays: 30,
		fromDate: "2026-06-01",
		toDate: "2026-06-30",
		profile: { diagnosis: "crohn", diagnosisYear: 2019 },
		identity: "Jean Test",
		entries,
		extrasByDate: new Map([["2026-06-14", { weightKg: 61.2 }]]),
	};
	return buildReport(input);
}

/** Rapport épars (données rares) — un seul jour, pas d'identité. */
function sparseReport() {
	const input: ReportInput = {
		periodDays: 30,
		fromDate: "2026-06-01",
		toDate: "2026-06-30",
		profile: { diagnosis: "crohn", diagnosisYear: null },
		entries: [
			{
				localDate: "2026-06-15",
				occurredAt: at("2026-06-15", 10),
				tz: "UTC",
				kind: "stool",
				bristol: 4,
			},
		],
		extrasByDate: new Map(),
	};
	return buildReport(input);
}

describe("renderReportHtml — snapshots", () => {
	it("FR avec données riches", () => {
		expect(renderReportHtml(richReport(), FR_LABELS)).toMatchSnapshot();
	});
	it("EN avec données éparses", () => {
		expect(renderReportHtml(sparseReport(), EN_LABELS)).toMatchSnapshot();
	});
});

describe("renderReportHtml — déterminisme", () => {
	it("même entrée → même sortie byte à byte", () => {
		const a = renderReportHtml(richReport(), FR_LABELS);
		const b = renderReportHtml(richReport(), FR_LABELS);
		expect(a).toBe(b);
	});

	it("échappe l'identité saisie (pas d'injection HTML)", () => {
		const report = buildReport({
			periodDays: 30,
			fromDate: "2026-06-01",
			toDate: "2026-06-30",
			profile: { diagnosis: "crohn", diagnosisYear: null },
			identity: "<script>x</script>",
			entries: [
				{
					localDate: "2026-06-10",
					occurredAt: at("2026-06-10", 9),
					tz: "UTC",
					kind: "stool",
					bristol: 4,
				},
			],
			extrasByDate: new Map(),
		});
		const html = renderReportHtml(report, FR_LABELS);
		expect(html).not.toContain("<script>x</script>");
		expect(html).toContain("&lt;script&gt;");
	});

	it("contient le disclaimer exact et un SVG de courbe quand il y a des scores", () => {
		const html = renderReportHtml(richReport(), FR_LABELS);
		// Le disclaimer est présent (apostrophe échappée dans le HTML).
		expect(html).toContain("ne constitue pas un avis médical ni un dispositif médical.");
		expect(html).toContain("<svg");
	});
});
