// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderReportHtml — snapshots > EN avec données éparses 1`] = `
"<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8" />
<meta name="viewport" content="width=device-width, initial-scale=1" />
<title>Crohnicle — Tracking report</title>
<style>
* { box-sizing: border-box; }
html, body { margin: 0; padding: 0; }
body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif; color: #0A0A0A; background: #FFFFFF; font-size: 13px; line-height: 1.45; }
.page { max-width: 760px; margin: 0 auto; padding: 32px 28px; }
header { display: flex; justify-content: space-between; align-items: flex-end; border-bottom: 2px solid #0A0A0A; padding-bottom: 12px; margin-bottom: 20px; }
.brand { font-size: 22px; font-weight: 700; letter-spacing: -0.3px; }
.report-title { font-size: 13px; color: #6B6B70; margin-top: 2px; }
.meta { text-align: right; font-size: 12px; color: #6B6B70; }
section { margin-bottom: 22px; }
h2 { font-size: 15px; font-weight: 600; margin: 0 0 8px; }
.caption { font-size: 12px; color: #6B6B70; margin: 0 0 8px; }
.muted { color: #6B6B70; }
.fields { display: flex; flex-wrap: wrap; gap: 8px 28px; }
.field { display: flex; flex-direction: column; }
.field-label { font-size: 11px; text-transform: uppercase; letter-spacing: 0.4px; color: #A1A1A6; }
.field-value { font-size: 15px; font-weight: 600; }
.chart { border: 1px solid #E5E5EA; border-radius: 12px; padding: 12px; }
.legend { display: flex; flex-wrap: wrap; gap: 14px; margin-top: 8px; font-size: 11px; color: #6B6B70; }
.legend-item { display: inline-flex; align-items: center; gap: 5px; }
.swatch { width: 12px; height: 12px; border-radius: 3px; border: 1px solid #E5E5EA; display: inline-block; }
table.weekly { width: 100%; border-collapse: collapse; font-size: 12px; }
table.weekly th, table.weekly td { text-align: left; padding: 7px 8px; border-bottom: 1px solid #E5E5EA; }
table.weekly th { font-size: 11px; text-transform: uppercase; letter-spacing: 0.3px; color: #A1A1A6; font-weight: 600; }
table.weekly td:not(:first-child), table.weekly th:not(:first-child) { text-align: right; }
ul.consult { margin: 0; padding-left: 18px; }
ul.consult li { margin-bottom: 6px; }
footer { margin-top: 28px; padding-top: 12px; border-top: 1px solid #E5E5EA; font-size: 11px; color: #A1A1A6; }
@media print { .page { padding: 0; } body { font-size: 12px; } }
</style>
</head>
<body>
<div class="page">
<header>
<div>
<div class="brand">Crohnicle</div>
<div class="report-title">Tracking report</div>
</div>
<div class="meta">Period: last 30 days<br />Generated on July 4, 2026</div>
</header>

<section>
<h2>Profile</h2>
<div class="fields"></div>
</section>

<section>
<h2>Estimated HBI (self-assessment)</h2>
<p class="caption">Self-assessed estimate, not a diagnosis.</p>
<div class="chart"><p class="muted">Not enough data for the curve yet.</p></div>
</section>

<section>
<h2>Week by week</h2>
<table class="weekly"><thead><tr><th>Week</th><th>Stools</th><th>Days with blood</th><th>Worst pain</th><th>Weight</th></tr></thead><tbody><tr><td>Week 25</td><td>1</td><td>0</td><td>—</td><td>—</td></tr></tbody></table>
</section>

<section>
<h2>3 points to discuss with your GI</h2>
<ul class="consult"><li>No particular signal over the period — your tracking is complete.</li></ul>
</section>

<section>
<h2>Your food associations</h2>
<p class="muted">Available after 14 days of data.</p>
</section>

<footer>Self-assessment document generated by Crohnicle — not medical advice nor a medical device.</footer>
</div>
</body>
</html>"
`;

exports[`renderReportHtml — snapshots > FR avec données riches 1`] = `
"<!doctype html>
<html lang="fr">
<head>
<meta charset="utf-8" />
<meta name="viewport" content="width=device-width, initial-scale=1" />
<title>Crohnicle — Rapport de suivi</title>
<style>
* { box-sizing: border-box; }
html, body { margin: 0; padding: 0; }
body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif; color: #0A0A0A; background: #FFFFFF; font-size: 13px; line-height: 1.45; }
.page { max-width: 760px; margin: 0 auto; padding: 32px 28px; }
header { display: flex; justify-content: space-between; align-items: flex-end; border-bottom: 2px solid #0A0A0A; padding-bottom: 12px; margin-bottom: 20px; }
.brand { font-size: 22px; font-weight: 700; letter-spacing: -0.3px; }
.report-title { font-size: 13px; color: #6B6B70; margin-top: 2px; }
.meta { text-align: right; font-size: 12px; color: #6B6B70; }
section { margin-bottom: 22px; }
h2 { font-size: 15px; font-weight: 600; margin: 0 0 8px; }
.caption { font-size: 12px; color: #6B6B70; margin: 0 0 8px; }
.muted { color: #6B6B70; }
.fields { display: flex; flex-wrap: wrap; gap: 8px 28px; }
.field { display: flex; flex-direction: column; }
.field-label { font-size: 11px; text-transform: uppercase; letter-spacing: 0.4px; color: #A1A1A6; }
.field-value { font-size: 15px; font-weight: 600; }
.chart { border: 1px solid #E5E5EA; border-radius: 12px; padding: 12px; }
.legend { display: flex; flex-wrap: wrap; gap: 14px; margin-top: 8px; font-size: 11px; color: #6B6B70; }
.legend-item { display: inline-flex; align-items: center; gap: 5px; }
.swatch { width: 12px; height: 12px; border-radius: 3px; border: 1px solid #E5E5EA; display: inline-block; }
table.weekly { width: 100%; border-collapse: collapse; font-size: 12px; }
table.weekly th, table.weekly td { text-align: left; padding: 7px 8px; border-bottom: 1px solid #E5E5EA; }
table.weekly th { font-size: 11px; text-transform: uppercase; letter-spacing: 0.3px; color: #A1A1A6; font-weight: 600; }
table.weekly td:not(:first-child), table.weekly th:not(:first-child) { text-align: right; }
ul.consult { margin: 0; padding-left: 18px; }
ul.consult li { margin-bottom: 6px; }
footer { margin-top: 28px; padding-top: 12px; border-top: 1px solid #E5E5EA; font-size: 11px; color: #A1A1A6; }
@media print { .page { padding: 0; } body { font-size: 12px; } }
</style>
</head>
<body>
<div class="page">
<header>
<div>
<div class="brand">Crohnicle</div>
<div class="report-title">Rapport de suivi</div>
</div>
<div class="meta">Période : 30 derniers jours<br />Généré le 4 juillet 2026</div>
</header>

<section>
<h2>Profil</h2>
<div class="fields"><div class="field"><span class="field-label">Patient</span><span class="field-value">Jean Test</span></div><div class="field"><span class="field-label">Diagnostic</span><span class="field-value">Maladie de Crohn</span></div><div class="field"><span class="field-label">Année du diagnostic</span><span class="field-value">2019</span></div></div>
</section>

<section>
<h2>HBI estimé (auto-évaluation)</h2>
<p class="caption">Estimé par auto-évaluation, pas un diagnostic.</p>
<div class="chart"><svg viewBox="0 0 720 240" width="100%" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg"><rect x="12" y="165.3" width="696" height="56.7" fill="rgba(16, 185, 129, 0.14)" /><rect x="12" y="131.3" width="696" height="34.0" fill="rgba(245, 158, 11, 0.08)" /><rect x="12" y="40.7" width="696" height="90.7" fill="rgba(245, 158, 11, 0.16)" /><rect x="12" y="18.0" width="696" height="22.7" fill="rgba(245, 158, 11, 0.26)" /><line x1="12" y1="222.0" x2="708" y2="222.0" stroke="#E5E5EA" stroke-width="1" /><path d="M12.0,176.7 L36.0,176.7 L60.0,176.7 L84.0,176.7 L108.0,176.7 L132.0,188.0 L156.0,188.0 L180.0,154.0 L204.0,154.0 L228.0,154.0 L252.0,154.0 L276.0,154.0 L300.0,154.0 L324.0,154.0" stroke="#0A0A0A" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" fill="none" /><circle cx="12.0" cy="176.7" r="3" fill="#0A0A0A" /><circle cx="36.0" cy="176.7" r="3" fill="#0A0A0A" /><circle cx="60.0" cy="176.7" r="3" fill="#0A0A0A" /><circle cx="84.0" cy="176.7" r="3" fill="#0A0A0A" /><circle cx="108.0" cy="176.7" r="3" fill="#0A0A0A" /><circle cx="132.0" cy="188.0" r="3" fill="#0A0A0A" /><circle cx="156.0" cy="188.0" r="3" fill="#0A0A0A" /><circle cx="180.0" cy="154.0" r="3" fill="#0A0A0A" /><circle cx="204.0" cy="154.0" r="3" fill="#0A0A0A" /><circle cx="228.0" cy="154.0" r="3" fill="#0A0A0A" /><circle cx="252.0" cy="154.0" r="3" fill="#0A0A0A" /><circle cx="276.0" cy="154.0" r="3" fill="#0A0A0A" /><circle cx="300.0" cy="154.0" r="3" fill="#0A0A0A" /><circle cx="324.0" cy="154.0" r="3" fill="#0A0A0A" /></svg><div class="legend"><span class="legend-item"><span class="swatch" style="background:rgba(16, 185, 129, 0.14)"></span>Rémission</span><span class="legend-item"><span class="swatch" style="background:rgba(245, 158, 11, 0.08)"></span>Légère</span><span class="legend-item"><span class="swatch" style="background:rgba(245, 158, 11, 0.16)"></span>Modérée</span><span class="legend-item"><span class="swatch" style="background:rgba(245, 158, 11, 0.26)"></span>Sévère</span></div></div>
</section>

<section>
<h2>Semaine par semaine</h2>
<table class="weekly"><thead><tr><th>Semaine</th><th>Selles</th><th>Jours avec sang</th><th>Pire douleur</th><th>Poids</th></tr></thead><tbody><tr><td>Semaine 23</td><td>12</td><td>3</td><td>1</td><td>—</td></tr><tr><td>Semaine 24</td><td>7</td><td>0</td><td>2</td><td>61.2 kg</td></tr></tbody></table>
</section>

<section>
<h2>3 points à aborder avec votre gastro</h2>
<ul class="consult"><li>Sang visible rapporté 3 jours sur 30.</li><li>5 selles nocturnes sur la période.</li></ul>
</section>

<section>
<h2>Vos associations alimentaires</h2>
<p class="muted">Disponible après 14 jours de données.</p>
</section>

<footer>Document d&#39;auto-évaluation généré par Crohnicle — ne constitue pas un avis médical ni un dispositif médical.</footer>
</div>
</body>
</html>"
`;
